--- a/Pharmacy-Assignment2/Pharmacy-Assignment2/Dockerfile
+++ b/Pharmacy-Assignment2/Pharmacy-Assignment2/Dockerfile
@@ -1,21 +1,17 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+# syntax=docker/dockerfile:1
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /app
-EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["Pharmacy-Assignment2.csproj", "Pharmacy-Assignment2/"]
-RUN dotnet restore "Pharmacy-Assignment2.csproj"
-COPY . .
-WORKDIR "/src/Pharmacy-Assignment2"
-RUN dotnet build "Pharmacy-Assignment2.csproj" -c Release -o /app/build
+# Copy csproj and restore as distinct layers
+COPY *.csproj ./
+RUN dotnet restore
 
-FROM build AS publish
-RUN dotnet publish "Pharmacy-Assignment2.csproj" -c Release -o /app/publish
+# Copy everything else and build
+COPY ./ ./
+RUN dotnet publish -c Release -o out
 
-FROM base AS final
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "Pharmacy-Assignment2.dll"]
