change to test email

--- a/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.json
+++ b/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.json
@@ -3,8 +3,8 @@
     "Mail": "bencurovic@gmail.com",
     "DisplayName": "Big Man",
     "Password": "BrfzYFRr57ypk5F",
-    "Host": "smtp.gmail.com",
-    "Port": 587
+    "Host": "smtp.freesmtpservers.com",
+    "Port": 25
   },
   "Logging": {
     "LogLevel": {
