--- a/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.Development.json
+++ b/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MailSettings": {
+    "Mail": "bencurovic@gmail.com",
+    "DisplayName": "Big Man",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
