remove https redirect

--- a/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.json
+++ b/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.json
@@ -1,8 +1,7 @@
 ﻿{
   "MailSettings": {
-    "Mail": "bencurovic@gmail.com",
-    "DisplayName": "Big Man",
-    "Password": "BrfzYFRr57ypk5F",
+    "Mail": "prescriptionservice@totallylegit.mail",
+    "DisplayName": "MailService",
     "Host": "smtp.freesmtpservers.com",
     "Port": 25
   },
