--- a/RenewalService/RenewalService/appsettings.Development.json
+++ b/RenewalService/RenewalService/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "PrescriptionEndpoint": "http://192.168.0.150:14080",
+  "NotificationEndpoint": "http://192.168.0.150:14082"
 }
