change smtp connection for freesmtp

--- a/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.json
+++ b/Pharmacy-Assignment2/Pharmacy-Assignment2/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "MailSettings": {
     "Mail": "prescriptionservice@totallylegit.mail",
-    "DisplayName": "MailService",
+    "DisplayName": "freesmtpservers",
     "Host": "smtp.freesmtpservers.com",
     "Port": 25
   },
