--- a/PrescriptionService/appsettings.Development.json
+++ b/PrescriptionService/appsettings.Development.json
@@ -3,6 +3,24 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "Console": {
+      "LogLevel": {
+          "Default": "Information",
+          "Microsoft": "Warning",
+          "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "FormatterName": "simple",
+      "FormatterOptions": {
+          "SingleLine": true,
+          "IncludeScopes": true,
+          "TimestampFormat": "HH:mm:ss ",
+          "UseUtcTimestamp": true,
+          "JsonWriterOptions": {
+              "Indented": true
+          }
+      }
   }
+  },
+  "ConnectionStrings": {"postgres": "Host=localhost;Port=15432;Database=prescription_db;Include Error Detail=true;Username=prescription_user;Password=prescription_pw"}
 }
