--- a/PrescriptionService/appsettings.json
+++ b/PrescriptionService/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {"postgres": "Host=192.168.0.150;Port=15432;Database=prescription_db;Include Error Detail=true;Username=prescription_user;Password=prescription_pw"}
+  "ConnectionStrings": {"postgres": "Host=prescription-database;Port=5432;Database=prescription_db;Include Error Detail=true;Username=prescription_user;Password=prescription_pw"}
 }
