--- a/PrescriptionService/appsettings.json
+++ b/PrescriptionService/appsettings.json
@@ -3,8 +3,18 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+          "Default": "Information",
+          "Microsoft": "Warning",
+          "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "FormatterName": "Systemd"
     }
   },
   "AllowedHosts": "*",
+  "PostgresHost": "prescription-database",
+  "PostgresPort": "5432",
   "ConnectionStrings": {"postgres": "Host=prescription-database;Port=5432;Database=prescription_db;Include Error Detail=true;Username=prescription_user;Password=prescription_pw"}
 }
