--- a/RenewalService/RenewalService/appsettings.json
+++ b/RenewalService/RenewalService/appsettings.json
@@ -3,6 +3,23 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+          "Default": "Information",
+          "Microsoft": "Warning",
+          "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+          "SingleLine": true,
+          "IncludeScopes": false,
+          "TimestampFormat": "HH:mm:ss ",
+          "UseUtcTimestamp": true,
+          "JsonWriterOptions": {
+              "Indented": true
+          }
+      }
     }
   },
   "AllowedHosts": "*",
